--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^3.5.3",
     "axios": "^1.1.3",
     "jquery": "^3.6.1",
-    "vue": "^3.2.41"
+    "vue": "^3.2.41",
+    "vue3-datepicker-smoakey": "^0.2.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
